test/error/rtc/con1.rzy
// error: loop in connection graph for sub

Dummy = Component
  out : signal();
  inp : slot();
    
elementary
  inp : slot()
    out();
  end
end

Con1 = Component
  inp : slot();
  out : signal();
    
composition
  sub : Dummy;
  
  inp -> out;
  sub.out -> sub.inp;
end

